Upgraded to later version of Checker Framework. Revised @SuppressWarnings annotation's warning names. Bundled now uses Java 11. Upgraded SqLite library. Revised ImportDialog. Rewrote Resource as an enum. Added backup file on exit.